<resources>
    <string name="app_name">geoAppDemo</string>

    <!-- bottom menu -->
    <string name="menu_item_1">Create</string>
    <string name="menu_item_2">Saved Poi</string>
    <string name="menu_item_3">Show Poi</string>

    <!-- Fragment Label -->
    <string name="fragmentCreatePoi">Create Point of Interest</string>
    <string name="fragmentListOfPoi">Point of Interest List</string>
    <string name="fragmentsShowAllPoi">Show All saved poi</string>

    <!-- Alert Label -->
    <string name="alertTitle">Create Poi!</string>
    <string name="alertCoord">Latitude/Longitude</string>
    <string name="alertText">Insert Name</string>
    <string name="alertImage">Insert Image</string>
    <string name="alertgallery">Gallery</string>
    <string name="alertCamera">TakePhoto</string>
    <string name="alertSave">Save Poi</string>
    <string name="alertCancel">Cancel Poi</string>

    <!-- Alert permission -->
    <string name="permission_ok">permission granted</string>
    <string name="permission_no">permission refused</string>
    <string name="permission_required">Permission required</string>
    <string name="permissione_question_1">Permission to access your</string>
    <string name="permissione_question_2">is required to use this app</string>
    <string name="permission_ok_button">OK</string>
</resources>