<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/poiHomeFragment">

    <fragment
        android:id="@+id/poiHomeFragment"
        android:name="com.lucaparlapiano.gepappdemo.fragments.PoiHomeFragment"
        android:label="@string/fragmentCreatePoi"
        tools:layout="@layout/fragment_poi_home" />
    <fragment
        android:id="@+id/poiListFragment"
        android:name="com.lucaparlapiano.gepappdemo.fragments.PoiListFragment"
        android:label="@string/fragmentListOfPoi"
        tools:layout="@layout/fragment_poi_list" />
    <fragment
        android:id="@+id/showPoiFragments"
        android:name="com.lucaparlapiano.gepappdemo.fragments.ShowPoiFragments"
        android:label="@string/fragmentsShowAllPoi"
        tools:layout="@layout/fragment_show_poi_fragments" />
</navigation>